<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_notebook"
        android:title="@string/notebook"
        app:showAsAction="always"
        android:icon="@drawable/ic_notebook_light" />
    <item
        android:id="@+id/action_list_course"
        android:title="@string/list_course"
        app:showAsAction="always"
        android:icon="@drawable/ic_course_light" />
    <item
        android:id="@+id/action_schedule"
        android:title="@string/schedule"
        app:showAsAction="always"
        android:icon="@drawable/ic_schedule_light"/>
    <item
        android:id="@+id/action_assingments"
        android:title="@string/assingments"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_list_light" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_light" />
</menu>