<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center">

        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="21dp"
            android:id="@+id/Ass_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/title"
            android:ems="10"
            android:id="@+id/Title_txt"
            android:layout_below="@+id/Ass_title"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title" />

        <TextView
            android:text="@string/list_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Title_txt"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title"
            android:id="@+id/couse_list" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/course_spinner"
            android:layout_below="@+id/couse_list"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title" />

        <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_spinner"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title"
            android:id="@+id/Description_text" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/description"
            android:ems="10"
            android:id="@+id/Description_Edit"
            android:layout_below="@+id/Description_text"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title" />
        <TextView
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Description_Edit"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title"
            android:id="@+id/Date_text" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/date"
            android:focusable="false"
            android:ems="10"
            android:id="@+id/Date_edit"
            android:layout_below="@+id/Date_text"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title" />
        <TextView
            android:text="@string/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Date_edit"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title"
            android:id="@+id/Repeat_text" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/repeat_spinner"
            android:layout_below="@+id/Repeat_text"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title" />
        <TextView
            android:text="@string/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/repeat_spinner"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title"
            android:id="@+id/priority_txt" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/priority_spinner"
            android:layout_below="@+id/priority_txt"
            android:layout_alignLeft="@+id/Ass_title"
            android:layout_alignStart="@+id/Ass_title" />
        <Button
            android:text="@string/insert_assignment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/insert_assingment_button"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/priority_spinner"
            android:layout_marginLeft="130dp"
            android:layout_marginStart="130dp"
             />

        <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clr_assignment_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</ScrollView>